feat: add logout api and docs
